add itenary and home menu

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8614,4 +8614,25 @@ label.hide-component {
     user-select: none;
     pointer-events: none;
 }
+a.btn-search.button-primary {
+    margin: auto;
+}
+
+.navigation-mobile{
+    display: none !important;
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+    .navigation-mobile{
+        display: none !important;
+    }
+
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .navigation-mobile{
+        display: none !important;
+    }
+}
 /*# sourceMappingURL=style.css.map */
